refactor: rename `peripheral-info` -> `peripheral`
