# docs/openapi.yml
@@ -38,8 +38,6 @@ tags:
     description: Computer management
   - name: peripherals
     description: Peripheral management
-  - name: peripheral-info
-    description: Peripheral info management
 paths:
   /api/v1/auth/login:
     post:
@@ -1924,169 +1922,6 @@ paths:
                     $ref: '#/components/schemas/PeripheralDto'
         '404':
           description: Peripheral not found
-      security:
-        - JWT: []
-  /api/v1/peripheral-info:
-    get:
-      summary: Get all peripheral info
-      description: Retrieve a list of all peripheral info with pagination.
-      tags:
-        - peripheral-info
-      parameters:
-        - $ref: '#/components/parameters/page'
-        - $ref: '#/components/parameters/pageSize'
-        - $ref: '#/components/parameters/sorting'
-        - $ref: '#/components/parameters/fromCreateTimestamp'
-        - $ref: '#/components/parameters/toCreateTimestamp'
-        - name: name
-          in: query
-          description: Every peripheral info whose name contains this name will be returned
-          schema:
-            type: string
-        - name: brand
-          in: query
-          description: Every peripheral info whose brand contains this brand will be returned
-          schema:
-            type: string
-        - name: provider
-          in: query
-          description: Every peripheral info whose provider ID is this ID will be returned
-          schema:
-            type: string
-            format: uuid
-        - name: fromImportPrice
-          in: query
-          description: Every peripheral info whose import price is greater than or equal to this value will be returned
-          schema:
-            type: number
-            format: float
-        - name: toImportPrice
-          in: query
-          description: Every peripheral info whose import price is less than or equal to this value will be returned
-          schema:
-            type: number
-            format: float
-      responses:
-        '200':
-          description: List of peripheral info retrieved successfully (with pagination metadata).
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - type: object
-                    properties:
-                      data:
-                        type: array
-                        items:
-                          $ref: '#/components/schemas/PeripheralInfoDto'
-                  - $ref: '#/components/schemas/ResponseMeta'
-      security:
-        - JWT: []
-    post:
-      summary: Create a new peripheral info
-      tags:
-        - peripheral-info
-      requestBody:
-        required: true
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/CreatePeripheralInfoDto'
-      responses:
-        '201':
-          description: Peripheral info created successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/PeripheralInfoDto'
-        '400':
-          description: Bad request
-        '409':
-          description: Peripheral info name already exists
-      security:
-        - JWT: []
-
-  /api/v1/peripheral-info/{id}:
-    get:
-      summary: Get a peripheral info by ID
-      tags:
-        - peripheral-info
-      parameters:
-        - name: id
-          in: path
-          description: The peripheral info ID
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        '200':
-          description: Get a peripheral info by ID.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/PeripheralInfoDto'
-        '404':
-          description: Peripheral info not found
-      security:
-        - JWT: []
-    patch:
-      summary: Update a peripheral info by ID
-      tags:
-        - peripheral-info
-      parameters:
-        - name: id
-          in: path
-          description: The peripheral info ID
-          required: true
-          schema:
-            type: string
-            format: uuid
-      requestBody:
-        required: true
-        content:
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/UpdatePeripheralInfoDto'
-      responses:
-        '200':
-          description: Peripheral info updated successfully.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  data:
-                    $ref: '#/components/schemas/PeripheralInfoDto'
-        '400':
-          description: Bad request
-        '404':
-          description: Peripheral info not found
-      security:
-        - JWT: []
-    delete:
-      summary: Delete a peripheral info by ID
-      tags:
-        - peripheral-info
-      parameters:
-        - name: id
-          in: path
-          description: The peripheral info ID
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        '204':
-          description: Peripheral info deleted successfully
-        '404':
-          description: Peripheral info not found
       security:
         - JWT: []
 components:
