# src/modules/peripheral-info/controllers/index.ts
@@ -1,1 +1,0 @@
-export * from './peripheral-info.controller';
