# src/modules/peripheral-info/dtos/index.ts
@@ -1,4 +1,0 @@
-export * from './peripheral-info.dto';
-export * from './create-peripheral-info.dto';
-export * from './update-peripheral-info.dto';
-export * from './peripheral-info-query.dto';
