# src/modules/peripheral-info/router/index.ts
@@ -1,1 +1,0 @@
-export * from './peripheral-info.router';
