# src/modules/peripheral/controllers/peripheral.controller.ts
@@ -1,22 +1,22 @@
 import { NextFunction, Request, Response } from 'express';
 
 import { HttpStatusCode } from '@/base/common/enums';
-import { peripheralInfoQueryDto } from '@/modules/peripheral-info/dtos';
-import { createPeripheralInfoDto } from '@/modules/peripheral-info/dtos/create-peripheral-info.dto';
-import { updatePeripheralInfoDto } from '@/modules/peripheral-info/dtos/update-peripheral-info.dto';
-import { peripheralInfoService } from '@/modules/peripheral-info/services';
+import { peripheralQueryDto } from '@/modules/peripheral/dtos';
+import { createPeripheralDto } from '@/modules/peripheral/dtos/create-peripheral.dto';
+import { updatePeripheralDto } from '@/modules/peripheral/dtos/update-peripheral.dto';
+import { peripheralService } from '@/modules/peripheral/services';
 
-class PeripheralInfoController {
+class PeripheralController {
   /**
-   * `[GET]` `/api/v1/peripheral-info`
+   * `[GET]` `/api/v1/peripherals`
    *
    * Get all existing (non-deleted) peripheral info
    */
   async findAll(req: Request, res: Response, next: NextFunction) {
     try {
-      const dto = peripheralInfoQueryDto.parse(req.query);
+      const dto = peripheralQueryDto.parse(req.query);
       res.status(HttpStatusCode.OK).json(
-        await peripheralInfoService.findAllAndCount({
+        await peripheralService.findAllAndCount({
           ...dto,
           deleted: false,
         }),
@@ -27,23 +27,23 @@ class PeripheralInfoController {
   }
 
   /**
-   * `[GET]` `/api/v1/peripheral-info/deleted`
+   * `[GET]` `/api/v1/peripherals/deleted`
    *
    * Get all deleted peripheral info
    */
   async findAllDeleted(req: Request, res: Response, next: NextFunction) {
     try {
-      const dto = peripheralInfoQueryDto.parse(req.query);
+      const dto = peripheralQueryDto.parse(req.query);
       res
         .status(HttpStatusCode.OK)
-        .json(await peripheralInfoService.findAllDeletedAndCount(dto));
+        .json(await peripheralService.findAllDeletedAndCount(dto));
     } catch (err) {
       next(err);
     }
   }
 
   /**
-   * `[GET]` `/api/v1/peripheral-info/:id`
+   * `[GET]` `/api/v1/peripherals/:id`
    *
    * Get an existing peripheral info by ID
    * @throws {NotFoundException} - if a peripheral info is not found by the provided ID
@@ -52,41 +52,41 @@ class PeripheralInfoController {
     try {
       res
         .status(HttpStatusCode.OK)
-        .json(await peripheralInfoService.findOneById(req.params.id!));
+        .json(await peripheralService.findOneById(req.params.id!));
     } catch (err) {
       next(err);
     }
   }
 
   /**
-   * `[POST]` `/api/v1/peripheral-info`
+   * `[POST]` `/api/v1/peripherals`
    *
    * Create a new peripheral info
    */
   async createPeripheralInfo(req: Request, res: Response, next: NextFunction) {
     try {
-      const dto = createPeripheralInfoDto.parse(req.body);
+      const dto = createPeripheralDto.parse(req.body);
       res
         .status(HttpStatusCode.CREATED)
-        .json(await peripheralInfoService.createPeripheralInfo(dto));
+        .json(await peripheralService.createPeripheralInfo(dto));
     } catch (err) {
       next(err);
     }
   }
 
   /**
-   * `[PATCH]` `/api/v1/peripheral-info/:id`
+   * `[PATCH]` `/api/v1/peripherals/:id`
    *
    * Update an existing peripheral info
    * @throws {NotFoundException} - if a peripheral info is not found by the provided ID
    */
   async updatePeripheralInfo(req: Request, res: Response, next: NextFunction) {
     try {
-      const dto = updatePeripheralInfoDto.parse(req.body);
+      const dto = updatePeripheralDto.parse(req.body);
       res
         .status(HttpStatusCode.OK)
         .json(
-          await peripheralInfoService.updatePeripheralInfo(req.params.id!, dto),
+          await peripheralService.updatePeripheralInfo(req.params.id!, dto),
         );
     } catch (err) {
       next(err);
@@ -94,7 +94,7 @@ class PeripheralInfoController {
   }
 
   /**
-   * `[DELETE]` `/api/v1/peripheral-info/:id`
+   * `[DELETE]` `/api/v1/peripherals/:id`
    *
    * Soft delete an existing peripheral info
    * @throws {NotFoundException} - if a peripheral info is not found by the provided ID
@@ -105,7 +105,7 @@ class PeripheralInfoController {
     next: NextFunction,
   ) {
     try {
-      await peripheralInfoService.softDeletePeripheralInfo(req.params.id!);
+      await peripheralService.softDeletePeripheralInfo(req.params.id!);
       res.status(HttpStatusCode.NO_CONTENT).json();
     } catch (err) {
       next(err);
@@ -113,7 +113,7 @@ class PeripheralInfoController {
   }
 
   /**
-   * `[PATCH]` `/api/v1/peripheral-info/restore/:id`
+   * `[PATCH]` `/api/v1/peripherals/restore/:id`
    *
    * Restore an existing soft-deleted peripheral info
    * @throws {NotFoundException} - if a peripheral info is not found or already restored
@@ -122,13 +122,11 @@ class PeripheralInfoController {
     try {
       res
         .status(HttpStatusCode.OK)
-        .json(
-          await peripheralInfoService.restorePeripheralInfo(req.params.id!),
-        );
+        .json(await peripheralService.restorePeripheralInfo(req.params.id!));
     } catch (err) {
       next(err);
     }
   }
 }
 
-export const peripheralInfoController = new PeripheralInfoController();
+export const peripheralController = new PeripheralController();
